src-tauri/rust_err.txt
    Checking photo_synth_king v0.1.0 (H:\project\CLIP JIANJI\src-tauri)
warning: unused import: `std::path::Path`
    --> src\lib.rs:1540:9
     |
1540 |     use std::path::Path;
     |         ^^^^^^^^^^^^^^^
     |
     = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `dirs`
    --> src\lib.rs:1548:9
     |
1548 |         dirs::audio_dir(),
     |         ^^^^ use of unresolved module or unlinked crate `dirs`
     |
     = help: if you wanted to use a crate named `dirs`, use `cargo add dirs` to add it to your `Cargo.toml`

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `dirs`
    --> src\lib.rs:1549:9
     |
1549 |         dirs::download_dir(),
     |         ^^^^ use of unresolved module or unlinked crate `dirs`
     |
     = help: if you wanted to use a crate named `dirs`, use `cargo add dirs` to add it to your `Cargo.toml`

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `dirs`
    --> src\lib.rs:1550:9
     |
1550 |         dirs::desktop_dir(),
     |         ^^^^ use of unresolved module or unlinked crate `dirs`
     |
     = help: if you wanted to use a crate named `dirs`, use `cargo add dirs` to add it to your `Cargo.toml`

error[E0282]: type annotations needed
    --> src\lib.rs:1556:16
     |
1556 |             if dir.exists() && dir.is_dir() {
     |                ^^^ cannot infer type

warning: variable does not need to be mutable
    --> src\lib.rs:1599:52
     |
1599 | async fn download_web_music(app: tauri::AppHandle, mut url: String, id: u64, name: String, artist: String, sessdata: Option<String...
     |                                                    ----^^^
     |                                                    |
     |                                                    help: remove this `mut`
     |
     = note: `#[warn(unused_mut)]` (part of `#[warn(unused)]`) on by default

warning: variable `word_matches_artist` is assigned to, but never used
    --> src\lib.rs:1505:9
     |
1505 |     let mut word_matches_artist = false;
     |         ^^^^^^^^^^^^^^^^^^^^^^^
     |
     = note: consider using `_word_matches_artist` instead
     = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: value assigned to `word_matches_artist` is never read
    --> src\lib.rs:1509:13
     |
1509 |             word_matches_artist = true;
     |             ^^^^^^^^^^^^^^^^^^^^^^^^^^
     |
     = help: maybe it is overwritten before being read?
     = note: `#[warn(unused_assignments)]` (part of `#[warn(unused)]`) on by default

warning: variable `actual_url` is assigned to, but never used
    --> src\lib.rs:1600:9
     |
1600 |     let mut actual_url = url.clone();
     |         ^^^^^^^^^^^^^^
     |
     = note: consider using `_actual_url` instead

warning: value assigned to `actual_url` is never read
    --> src\lib.rs:1651:21
     |
1651 |                     actual_url = first["baseUrl"].as_str().unwrap_or("").to_string();
     |                     ^^^^^^^^^^
     |
     = help: maybe it is overwritten before being read?

warning: value assigned to `actual_url` is never read
    --> src\lib.rs:1641:21
     |
1641 |                     actual_url = first["baseUrl"].as_str().unwrap_or("").to_string();
     |                     ^^^^^^^^^^
     |
     = help: maybe it is overwritten before being read?

Some errors have detailed explanations: E0282, E0433.
For more information about an error, try `rustc --explain E0282`.
warning: `photo_synth_king` (lib) generated 7 warnings
error: could not compile `photo_synth_king` (lib) due to 4 previous errors; 7 warnings emitted
